[gd_scene load_steps=4 format=3 uid="uid://b06jiarvyg44f"]

[ext_resource type="Script" uid="uid://ben8limsql1rv" path="res://MainMenu.gd" id="1_wolnu"]
[ext_resource type="Texture2D" uid="uid://cvect078tes73" path="res://assets/Start.png" id="2_bdemk"]
[ext_resource type="Texture2D" uid="uid://4ix2ypinun73" path="res://assets/title_final.png" id="2_cjjtc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 1922.0
offset_bottom = 1083.0
script = ExtResource("1_wolnu")

[node name="Label" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1922.0
offset_bottom = 1080.0
texture = ExtResource("2_cjjtc")
expand_mode = 2
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 793.0
offset_top = 666.0
offset_right = -36.0
offset_bottom = 891.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Wznów"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "
"
icon = ExtResource("2_bdemk")

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Wyjdź"
